overflow hidden bug fixed in nav bar on mobile responsive nav, checkout and shopping bag positiioning fixed, dropdown implemented for futher production of sub menus in nav, greatly improving UI in nav region

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -70,7 +70,7 @@ nav ul li a {
 
 
 
-/* Dropdown  */
+
 
 
 @media(max-width: 786px) {
@@ -84,6 +84,7 @@ nav ul li a {
       nav ul {
             max-height: 0px;
             background: #000;
+            overflow: hidden;
       }
 
       nav.black ul {
